--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -8,7 +8,7 @@ env:
   RESOURCE-GROUP: rg-eshoponweb-westeurope
   LOCATION: westeurope
   TEMPLATE-FILE: infra/webapp.bicep
-  SUBSCRIPTION-ID: 3ac27204-e17f-423c-8b43-94bcdad349f0D
+  SUBSCRIPTION-ID: 3ac27204-e17f-423c-8b43-94bcdad349f0
   WEBAPP-NAME: devops-webapp-westeurope-3237128686
 
 jobs:
