Update resource group and location for CI/CD

--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -5,11 +5,11 @@ on: workflow_dispatch
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-westeurope
-  LOCATION: westeurope
+  RESOURCE-GROUP: rg-eshoponweb-eastus
+  LOCATION: eastus
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 3ac27204-e17f-423c-8b43-94bcdad349f0
-  WEBAPP-NAME: devops-webapp-westeurope-3237128686
+  WEBAPP-NAME: devops-webapp-eastus-107083920
 
 jobs:
   #Build, test and publish .net web project in repository
